Stwitching to watch branch

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         </nav>
         <div class="sections">
             <section class="section" id="section1"><p class="section__p">Section 1</p>
-                <div class="digital-clock">
-                    <h3 class="digital-text">Digital Clock and Sound Alarm</h3>
-                    
+                <div class="digital-watch">
+                    <h3 class="digital-text">Digital Watch and Sound Alarm</h3>
+                    <p class="watch"></p>
+                    <button class="btn-start-watch">Start Watch</button>
+                    <button class="btn-stop-watch">Stop Watch</button>
+                    <button class="btn-star-alarm">Start Alarm</button>
+                    <button class="btn-stop-alarm">Stop Alarm</button>             
                 </div>
             </section>
             <section class="section" id="section2"><p class="section__p">Section 2</p></section>
