--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <h1 class="text">Dom Exercises</h1>
+            <h1 class="text">Dom Exercises| Let's Do it!!</h1>
         </div> 
         <nav class="nav">
             <a class="nav__link" href="#section1">Section 1</a>
