Adding some styles to the timer. Button start and stop timer finished....

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
                 <div class="digital-watch">
                     <h3 class="digital-text">Digital Watch and Sound Alarm</h3>
                     <p class="watch"></p>
-                    <button class="btn-start-watch">Start Watch</button>
-                    <button class="btn-stop-watch">Stop Watch</button>
-                    <button class="btn-star-alarm">Start Alarm</button>
-                    <button class="btn-stop-alarm">Stop Alarm</button>             
+                    <audio   autoplay controls preload="auto" src="mixkit-classic-alarm-995.wav" >
+                    </audio>
+                    <div class="buttons">
+                        <button class="btn-start-watch">Start Watch</button>
+                        <button class="btn-stop-watch">Stop Watch</button>
+                        <button class="btn-star-alarm">Start Alarm</button>
+                        <button class="btn-stop-alarm">Stop Alarm</button>             
+                    </div>
                 </div>
             </section>
             <section class="section" id="section2"><p class="section__p">Section 2</p></section>
