Digital clock and alarm sound finished

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
             <h1 class="text">Dom Exercises| Let's Do it!! | Amazing</h1>
         </div> 
         <nav class="nav">
-            <a class="nav__link" href="#section1">Section 1</a>
+            <a class="nav__link" href="#section1"> Digital Watch and Sound Alarm</a>
             <a class="nav__link" href="#section2">Section 2</a>
             <a class="nav__link" href="#section3">Section 3</a>
             <a class="nav__link" href="#section4">Section 4</a>
             <a class="nav__link" href="#section5">Section 5</a>
         </nav>
         <div class="sections">
-            <section class="section" id="section1"><p class="section__p">Section 1</p>
+            <section class="section" id="section1"><p class="section__p">Digital Watch and Sound Alarm</p>
                 <div class="digital-watch">
                     <h3 class="digital-text">Digital Watch and Sound Alarm</h3>
                     <p class="watch"></p>
-                    <audio   autoplay controls preload="auto" src="mixkit-classic-alarm-995.wav" >
+                    <audio class="audio" src="test.mp3" >
                     </audio>
                     <div class="buttons">
                         <button class="btn-start-watch">Start Watch</button>
                         <button class="btn-stop-watch">Stop Watch</button>
-                        <button class="btn-star-alarm">Start Alarm</button>
-                        <button class="btn-stop-alarm">Stop Alarm</button>             
+                        <button class="btn-start-alarm" data-playing="false">Start Alarm</button>
+                        <button class="btn-stop-alarm" data-playing="false">Stop Alarm</button>             
                     </div>
                 </div>
             </section>
