Key events finished

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div> 
         <nav class="nav">
             <a class="nav__link" href="#section1"> Digital Watch and Sound Alarm</a>
-            <a class="nav__link" href="#section2">Section 2</a>
+            <a class="nav__link" href="#section2">Key Events</a>
             <a class="nav__link" href="#section3">Section 3</a>
             <a class="nav__link" href="#section4">Section 4</a>
             <a class="nav__link" href="#section5">Section 5</a>
@@ -37,7 +37,13 @@
                     </div>
                 </div>
             </section>
-            <section class="section" id="section2"><p class="section__p">Section 2</p></section>
+            <section class="section" id="section2"><p class="section__p">Eventos del Teclado</p>
+                <div class="table">
+                    <div class="ball">
+                        
+                    </div>
+                </div>
+            </section>
             <section class="section" id="section3"><p class="section__p">Section 3</p></section>
             <section class="section" id="section4"><p class="section__p">Section 4</p></section>
             <section class="section" id="section5"><p class="section__p">Section 5</p></section>
