--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="nav">
             <a class="nav__link" href="#section1"> Digital Watch and Sound Alarm</a>
             <a class="nav__link" href="#section2">Key Events</a>
-            <a class="nav__link" href="#section3">Section 3</a>
+            <a class="nav__link" href="#section3">Countdown</a>
             <a class="nav__link" href="#section4">Section 4</a>
             <a class="nav__link" href="#section5">Section 5</a>
         </nav>
@@ -44,7 +44,10 @@
                     </div>
                 </div>
             </section>
-            <section class="section" id="section3"><p class="section__p">Section 3</p></section>
+            <section class="section" id="section3">
+                <p class="section__p">Countdown</p>
+                <div id="countdown"></div>
+            </section>
             <section class="section" id="section4"><p class="section__p">Section 4</p></section>
             <section class="section" id="section5"><p class="section__p">Section 5</p></section>
         </div>
