Scroll Top  Finished

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <img class="hamburger__nav" src="img/bars-solid.svg" alt="burger" width="40" height="40">
         </div>
     </div>
+    <div class="scroll-top-btn hidden">&#11014;</div>
     <script src="js/script.js" type="module"></script>
 </body>
 
