--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-dark="">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body data-dark="">
     <div class="container">
         <div class="title">
             <h1 class="text">Dom Exercises| Let's Do it!! | Amazing</h1>
@@ -56,6 +56,7 @@
         </div>
     </div>
     <div class="scroll-top-btn hidden">&#11014;</div>
+    <button class="dark-theme-btn">🌙</button>
     <script src="js/script.js" type="module"></script>
 </body>
 
