--- a/index.html
+++ b/index.html
@@ -14,33 +14,40 @@
     <div class="container">
         <div class="title">
             <h1 class="text">Dom Exercises| Let's Do it!! | Amazing</h1>
-        </div> 
+        </div>
         <nav class="nav">
             <a class="nav__link" href="#section1"> Digital Watch and Sound Alarm</a>
             <a class="nav__link" href="#section2">Key Events</a>
             <a class="nav__link" href="#section3">Countdown</a>
-            <a class="nav__link" href="#section4">Section 4</a>
+            <a class="nav__link" href="#section4">Responsive with JavaScript</a>
             <a class="nav__link" href="#section5">Section 5</a>
+            <a class="nav__link" href="#section5">Section 6</a>
+            <a class="nav__link" href="#section5">Section 7</a>
+            <a class="nav__link" href="#section5">Section 8</a>
+            <a class="nav__link" href="#section5">Section 9</a>
+            <a class="nav__link" href="#section5">Section 10</a>
         </nav>
         <div class="sections">
-            <section class="section" id="section1"><p class="section__p">Digital Watch and Sound Alarm</p>
+            <section class="section" id="section1">
+                <p class="section__p">Digital Watch and Sound Alarm</p>
                 <div class="digital-watch">
                     <h3 class="digital-text">Digital Watch and Sound Alarm</h3>
                     <p class="watch"></p>
-                    <audio class="audio" src="test.mp3" >
+                    <audio class="audio" src="test.mp3">
                     </audio>
                     <div class="buttons">
                         <button class="btn-start-watch">Start Watch</button>
                         <button class="btn-stop-watch">Stop Watch</button>
                         <button class="btn-start-alarm" data-playing="false">Start Alarm</button>
-                        <button class="btn-stop-alarm" data-playing="false">Stop Alarm</button>             
+                        <button class="btn-stop-alarm" data-playing="false">Stop Alarm</button>
                     </div>
                 </div>
             </section>
-            <section class="section" id="section2"><p class="section__p">Eventos del Teclado</p>
+            <section class="section" id="section2">
+                <p class="section__p">Eventos del Teclado</p>
                 <div class="table">
                     <div class="ball">
-                        
+
                     </div>
                 </div>
             </section>
@@ -48,8 +55,29 @@
                 <p class="section__p">Countdown</p>
                 <div id="countdown"></div>
             </section>
-            <section class="section" id="section4"><p class="section__p">Section 4</p></section>
-            <section class="section" id="section5"><p class="section__p">Section 5</p></section>
+            <section class="section" id="section4">
+                <p class="section__p">Responsive with JavaScript</p>
+                <div id="youtube"></div>
+                <div id="gmaps"></div>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 5</p>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 6</p>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 7</p>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 8</p>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 9</p>
+            </section>
+            <section class="section" id="section5">
+                <p class="section__p">Section 10</p>
+            </section>
         </div>
         <div class="hamburger">
             <img class="hamburger__nav" src="img/bars-solid.svg" alt="burger" width="40" height="40">
